--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using ficym.Components.Cards
-@using ficym.Services.location;
+@using ficym.Entities;
+@using ficym.IServices.location;
 
 <div class="container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -10,10 +11,9 @@
     </div>
 </div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
-
 @code
 {
+    [Inject]
     private GeoCordinates location { get; set; }
 
     private void OnGeoLocationRetrived(GeoCordinates cordinates)
