--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
         <div class="col">
-            <LocationCard OnGeoLocationRetrived="OnGeoLocationRetrived"></LocationCard>
+            <LocalizacaoCard OnGeoLocationRetrived="OnGeoLocationRetrived"></LocalizacaoCard>
         </div>
     </div>
 </div>
@@ -14,10 +14,10 @@
 @code
 {
     [Inject]
-    private GeoCordinates location { get; set; }
+    private Coordenadas loc { get; set; }
 
-    private void OnGeoLocationRetrived(GeoCordinates cordinates)
+    private void OnGeoLocationRetrived(Coordenadas coordenadas)
     {
-        this.location = cordinates;
+        this.loc = coordenadas;
     }
 }
